[gd_scene load_steps=12 format=2]

[ext_resource path="res://bg/01.png" type="Texture" id=1]
[ext_resource path="res://fonts/8-bit fortress.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/itzamna.png" type="Texture" id=3]
[ext_resource path="res://scrpts/Registro.gd" type="Script" id=4]
[ext_resource path="res://fonts/ea.tres" type="DynamicFont" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/8-bit fortress.ttf"

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/8-bit fortress.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[node name="Registro" type="Control"]
modulate = Color( 0.780392, 0.427451, 0.427451, 1 )
self_modulate = Color( 0.909804, 0.776471, 0.776471, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.0
margin_top = -240.0
margin_right = 432.0
margin_bottom = 240.0
theme = SubResource( 1 )
script = ExtResource( 4 )

[node name="01" type="Sprite" parent="."]
position = Vector2( 431.5, 238.5 )
scale = Vector2( 0.8525, 0.5025 )
texture = ExtResource( 1 )

[node name="btnSiguiente" type="Button" parent="."]
margin_left = 234.0
margin_top = 483.0
margin_right = 438.0
margin_bottom = 527.0
rect_pivot_offset = Vector2( 204, 44 )
custom_fonts/font = ExtResource( 5 )
text = "Continuar"

[node name="btnRegresar" type="Button" parent="."]
margin_left = 527.0
margin_top = 484.0
margin_right = 731.0
margin_bottom = 528.0
rect_pivot_offset = Vector2( 204, 44 )
custom_fonts/font = ExtResource( 5 )
text = "Regresar"

[node name="Label" type="Label" parent="."]
margin_left = 219.0
margin_top = 348.0
margin_right = 733.0
margin_bottom = 414.0
custom_fonts/font = SubResource( 3 )
text = "¡Bienvenido! nuevo guardian
¿Cual es tu nombre?"

[node name="lblExistente" type="Label" parent="."]
visible = false
margin_left = 478.0
margin_top = 374.0
margin_right = 793.0
margin_bottom = 397.0
custom_colors/font_color = Color( 0.890196, 0.0941176, 0.337255, 1 )
custom_fonts/font = SubResource( 6 )
text = "Este usuario ya existe!"

[node name="txtNombre" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -213.0
margin_top = 419.0
margin_right = 306.0
margin_bottom = 451.0
custom_fonts/font = SubResource( 4 )

[node name="Itzamna" type="Sprite" parent="."]
position = Vector2( 40, 353.8 )
scale = Vector2( 1.53333, 1.53333 )
texture = ExtResource( 3 )

[connection signal="pressed" from="btnSiguiente" to="." method="_on_btnSiguiente_pressed"]
[connection signal="pressed" from="btnRegresar" to="." method="_on_btnRegresar_pressed"]
